# maude-ts-mode

./: CMakeLists.txt  Cargo.toml  Makefile  Package.swift  binding.gyp  build.mk  go.mod  grammar.js  package.json  pyproject.toml  setup.py  tree-sitter.json
bindings/c/: tree-sitter-maude.pc.in
bindings/go/: binding.go  binding_test.go
bindings/node/: binding.cc  index.d.ts  index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_maude/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterMaude/: maude.h
bindings/swift/TreeSitterMaudeTests/: TreeSitterMaudeTests.swift
src/: grammar.json  node-types.json  parser.c
